Attempt to correct height on mobile horizontal screen

--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,12 @@ html.dark {
 
 body {
   height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
   justify-content: space-around;
-  padding-top: 1.6rem;
+  padding-top: 1rem;
   font-family: 'Encode Sans', sans-serif;
   overflow: auto;
   user-select: none;
